sc/source/ui/inc/rfindlst.hxx
@@ -22,19 +22,19 @@
 #include <tools/color.hxx>
 #include <address.hxx>
 #include <tools/solar.h>
+#include <editeng/editdata.hxx>
 
 #include <vector>
 
 struct ScRangeFindData
 {
     ScRange    aRef;
+    ESelection maSel;
     ScRefFlags nFlags;
-    sal_Int32  nSelStart;
-    sal_Int32  nSelEnd;
     Color      nColor;
 
-    ScRangeFindData( const ScRange& rR, ScRefFlags nF, sal_Int32 nS, sal_Int32 nE ) :
-        aRef(rR), nFlags(nF), nSelStart(nS), nSelEnd(nE) {}
+    ScRangeFindData( const ScRange& rR, ScRefFlags nF, const ESelection& rSel ) :
+        aRef(rR), maSel(rSel), nFlags(nF) {}
 };
 
 class ScRangeFindList
@@ -47,10 +47,10 @@ class ScRangeFindList
 public:
                      ScRangeFindList(OUString aName);
 
-    sal_uLong        Count() const                       { return maEntries.size(); }
+    size_t           Count() const                       { return maEntries.size(); }
     Color            Insert( const ScRangeFindData &rNew );
 
-    ScRangeFindData& GetObject( sal_uLong nIndex ) { return maEntries[nIndex]; }
+    ScRangeFindData& GetObject( size_t nIndex ) { return maEntries[nIndex]; }
 
     void             SetHidden( bool bSet ) { bHidden = bSet; }
 
